<resources>
    <string name="app_name">GoogleBootcampNavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_detail">Go Detail</string>
    <string name="nugget">Nugget</string>
    <string name="tv_desc">Lorem ipsum alsımdı sıdf sadfk dsaf djfsfk aks ş kdfasdşf kjkasfjasşdf kasdş fkjsa</string>
    <string name="tv_detail">Bu bir detail sayfasıdır.</string>
    <string name="view_transactions">View transactions</string>
    <string name="send_money">Send money</string>
    <string name="view_balance">View balance</string>
</resources>