<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:id="@+id/parentLayout">

    <Button
        android:layout_marginTop="50dp"
        android:text="@string/view_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_transactions_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button

        android:text="@string/send_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_money_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_transactions_btn"
        android:layout_marginTop="50dp"
        />
    <Button
        android:id="@+id/view_balance_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/send_money_btn"
        android:layout_marginTop="50dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>